--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
 module.exports = {
   // Você pode alterar essa chave!
-  authSecret: process.env.AUTH+SECRET
+  authSecret: process.env.AUTH_SECRET
 };
 
